force-app/main/default/objects/SFTIMESHEETDT__x/SFTIMESHEETDT__x.object-meta.xml
<CustomObject>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>SF_TIME_SHEET_DT</externalName>
    <label>Business Development Time Cost Spent</label>
    <pluralLabel>Business Development Time Cost Spent</pluralLabel>
</CustomObject>