force-app/main/default/objects/SFTIMESHEETDT__x/fields/EMP_NAME__c.field-meta.xml
<CustomField>
    <fullName>EMP_NAME__c</fullName>
    <description>EMP_NAME</description>
    <externalDeveloperName>EMP_NAME</externalDeveloperName>
    <label>EMP NAME</label>
    <length>150</length>
    <type>Text</type>
</CustomField>