force-app/main/default/objects/SFTIMESHEETDT__x/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <externalDeveloperName>SF_ID</externalDeveloperName>
    <label>Lead</label>
    <length>255</length>
    <referenceTargetField>Lead.leadID__c</referenceTargetField>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Business Development Time Cost Spent</relationshipLabel>
    <relationshipName>SF_TIME_SHEET_DT</relationshipName>
    <type>IndirectLookup</type>
</CustomField>