force-app/main/default/objects/SFTIMESHEETDT__x/fields/RATE_PER_HR__c.field-meta.xml
<CustomField>
    <fullName>RATE_PER_HR__c</fullName>
    <description>RATE_PER_HR</description>
    <externalDeveloperName>RATE_PER_HRS</externalDeveloperName>
    <label>RATE PER HR</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>