force-app/main/default/objects/SFTIMESHEETDT__x/fields/TOTAL_COST__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_COST__c</fullName>
    <description>TOTAL_COST</description>
    <externalDeveloperName>TOTAL_COST</externalDeveloperName>
    <label>TOTAL COST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>