force-app/main/default/objects/SFTIMESHEETDT__x/fields/TOTAL_HRS__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_HRS__c</fullName>
    <description>TOTAL_HRS</description>
    <externalDeveloperName>TOTAL_HRS</externalDeveloperName>
    <label>TOTAL HRS</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>