force-app/main/default/objects/SFTIMESHEETDT__x/fields/TOTAL_RATES__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_RATES__c</fullName>
    <description>TOTAL_RATES</description>
    <externalDeveloperName>TOTAL_RATES</externalDeveloperName>
    <label>TOTAL_RATES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>